--- a/model.ipynb
+++ b/model.ipynb
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,10 +1215,12 @@
     "    \n",
     "    def train(self, X):\n",
     "        \n",
-    "        for fold, (trn_idx, val_idx) in enumerate(skf.split(X['text_cleaned'], X['label'])):\n",
+    "#         for fold, (trn_idx, val_idx) in enumerate(skf.split(X['text_cleaned'], X['label'])):\n",
     "            \n",
-    "            print('\\nFold {}\\n'.format(fold))\n",
-    "        \n",
+    "#             print('\\nFold {}\\n'.format(fold))\n",
+    "            fold = 0\n",
+    "            trn_idx = X['text_cleaned'].index\n",
+    "            val_idx = [0]\n",
     "            X_trn_encoded = self.encode(X.loc[trn_idx, 'text_cleaned'].str.lower())\n",
     "            y_trn = X.loc[trn_idx, 'label']\n",
     "            X_val_encoded = self.encode(X.loc[val_idx, 'text_cleaned'].str.lower())\n",
@@ -1289,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,19 +1301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Whole Training Set Shape = (142, 4)\n"
+     "ename": "ValueError",
+     "evalue": "k-fold cross-validation requires at least one train/test split by setting n_splits=2 or more, got n_splits=1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-73-c37f1444d56f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mK\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mskf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStratifiedKFold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSEED\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mDISASTER\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Whole Training Set Shape = {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/envs/ml_vs_covid/lib/python3.7/site-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, n_splits, shuffle, random_state)\u001b[0m\n\u001b[1;32m    634\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    635\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_splits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 636\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    637\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    638\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_make_test_folds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/envs/ml_vs_covid/lib/python3.7/site-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, n_splits, shuffle, random_state)\u001b[0m\n\u001b[1;32m    282\u001b[0m                 \u001b[0;34m\"k-fold cross-validation requires at least one\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    283\u001b[0m                 \u001b[0;34m\" train/test split by setting n_splits=2 or more,\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 284\u001b[0;31m                 \" got n_splits={0}.\".format(n_splits))\n\u001b[0m\u001b[1;32m    285\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    286\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbool\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: k-fold cross-validation requires at least one train/test split by setting n_splits=2 or more, got n_splits=1."
      ]
     }
    ],
    "source": [
-    "K = 2\n",
+    "K = 1\n",
     "skf = StratifiedKFold(n_splits=K, random_state=SEED, shuffle=True)\n",
     "\n",
     "DISASTER = df_train['label'] == 1\n",
@@ -1327,71 +1335,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Fold 0\n",
-      "\n",
-      "Train on 71 samples, validate on 71 samples\n",
+      "Train on 142 samples, validate on 1 samples\n",
       "Epoch 1/10\n",
-      "64/71 [==========================>...] - ETA: 7s - loss: 0.6195 - accuracy: 0.7344 \n",
-      "Epoch: 1 - Training Precision: 0.385714 - Training Recall: 0.490909 - Training F1: 0.432\n",
-      "Epoch: 1 - Validation Precision: 0.387324 - Validation Recall: 0.5 - Validation F1: 0.436508\n",
-      "71/71 [==============================] - 123s 2s/sample - loss: 0.6112 - accuracy: 0.7465 - val_loss: 0.5614 - val_accuracy: 0.7746\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/anaconda3/envs/ml_vs_covid/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/10\n",
-      "64/71 [==========================>...] - ETA: 5s - loss: 0.6143 - accuracy: 0.7500 \n",
-      "Epoch: 2 - Training Precision: 0.387324 - Training Recall: 0.5 - Training F1: 0.436508\n",
-      "Epoch: 2 - Validation Precision: 0.387324 - Validation Recall: 0.5 - Validation F1: 0.436508\n",
-      "71/71 [==============================] - 100s 1s/sample - loss: 0.6008 - accuracy: 0.7606 - val_loss: 0.5503 - val_accuracy: 0.7746\n",
-      "Epoch 3/10\n",
-      "64/71 [==========================>...] - ETA: 5s - loss: 0.5914 - accuracy: 0.7656 \n",
-      "Epoch: 3 - Training Precision: 0.387324 - Training Recall: 0.5 - Training F1: 0.436508\n",
-      "Epoch: 3 - Validation Precision: 0.387324 - Validation Recall: 0.5 - Validation F1: 0.436508\n",
-      "71/71 [==============================] - 98s 1s/sample - loss: 0.5847 - accuracy: 0.7746 - val_loss: 0.5400 - val_accuracy: 0.7746\n",
-      "Epoch 4/10\n",
-      "64/71 [==========================>...] - ETA: 6s - loss: 0.5609 - accuracy: 0.7812 \n",
-      "Epoch: 4 - Training Precision: 0.387324 - Training Recall: 0.5 - Training F1: 0.436508\n",
-      "Epoch: 4 - Validation Precision: 0.387324 - Validation Recall: 0.5 - Validation F1: 0.436508\n",
-      "71/71 [==============================] - 105s 1s/sample - loss: 0.5697 - accuracy: 0.7746 - val_loss: 0.5316 - val_accuracy: 0.7746\n",
-      "Epoch 5/10\n",
-      "64/71 [==========================>...] - ETA: 5s - loss: 0.5266 - accuracy: 0.7969 \n",
-      "Epoch: 5 - Training Precision: 0.387324 - Training Recall: 0.5 - Training F1: 0.436508\n",
-      "Epoch: 5 - Validation Precision: 0.387324 - Validation Recall: 0.5 - Validation F1: 0.436508\n",
-      "71/71 [==============================] - 101s 1s/sample - loss: 0.5563 - accuracy: 0.7746 - val_loss: 0.5243 - val_accuracy: 0.7746\n",
-      "Epoch 6/10\n",
-      "64/71 [==========================>...] - ETA: 6s - loss: 0.5325 - accuracy: 0.7812 \n",
-      "Epoch: 6 - Training Precision: 0.387324 - Training Recall: 0.5 - Training F1: 0.436508\n",
-      "Epoch: 6 - Validation Precision: 0.387324 - Validation Recall: 0.5 - Validation F1: 0.436508\n",
-      "71/71 [==============================] - 106s 1s/sample - loss: 0.5425 - accuracy: 0.7746 - val_loss: 0.5175 - val_accuracy: 0.7746\n",
-      "Epoch 7/10\n",
-      "64/71 [==========================>...] - ETA: 6s - loss: 0.5297 - accuracy: 0.7656 \n",
-      "Epoch: 7 - Training Precision: 0.387324 - Training Recall: 0.5 - Training F1: 0.436508\n",
-      "Epoch: 7 - Validation Precision: 0.387324 - Validation Recall: 0.5 - Validation F1: 0.436508\n",
-      "71/71 [==============================] - 111s 2s/sample - loss: 0.5302 - accuracy: 0.7746 - val_loss: 0.5110 - val_accuracy: 0.7746\n",
-      "Epoch 8/10\n",
-      "64/71 [==========================>...] - ETA: 6s - loss: 0.5106 - accuracy: 0.7812 \n",
-      "Epoch: 8 - Training Precision: 0.387324 - Training Recall: 0.5 - Training F1: 0.436508\n",
-      "Epoch: 8 - Validation Precision: 0.387324 - Validation Recall: 0.5 - Validation F1: 0.436508\n",
-      "71/71 [==============================] - 109s 2s/sample - loss: 0.5178 - accuracy: 0.7746 - val_loss: 0.5047 - val_accuracy: 0.7746\n",
-      "Epoch 9/10\n",
-      "64/71 [==========================>...] - ETA: 6s - loss: 0.4983 - accuracy: 0.7812 \n",
-      "Epoch: 9 - Training Precision: 0.387324 - Training Recall: 0.5 - Training F1: 0.436508\n",
-      "Epoch: 9 - Validation Precision: 0.387324 - Validation Recall: 0.5 - Validation F1: 0.436508\n",
-      "71/71 [==============================] - 130s 2s/sample - loss: 0.5060 - accuracy: 0.7746 - val_loss: 0.4987 - val_accuracy: 0.7746\n",
-      "Epoch 10/10\n",
-      "32/71 [============>.................] - ETA: 49s - loss: 0.4840 - accuracy: 0.7812"
+      " 64/142 [============>.................] - ETA: 1:37 - loss: 0.5998 - accuracy: 0.6719"
      ]
     }
    ],
@@ -1402,10 +1348,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'train': {'precision': [0.38571428571428573,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718],\n",
+       "   'recall': [0.4909090909090909, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "   'f1': [0.432,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365]},\n",
+       "  'validation': {'precision': [0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718],\n",
+       "   'recall': [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "   'f1': [0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365]}},\n",
+       " 1: {'train': {'precision': [0.3872767857142857,\n",
+       "    0.43189368770764114,\n",
+       "    0.3805970149253731,\n",
+       "    0.3805970149253731,\n",
+       "    0.38405797101449274,\n",
+       "    0.38571428571428573,\n",
+       "    0.38571428571428573,\n",
+       "    0.38571428571428573,\n",
+       "    0.38571428571428573,\n",
+       "    0.38571428571428573],\n",
+       "   'recall': [0.4426136363636364,\n",
+       "    0.4068181818181818,\n",
+       "    0.4636363636363636,\n",
+       "    0.4636363636363636,\n",
+       "    0.4818181818181818,\n",
+       "    0.4909090909090909,\n",
+       "    0.4909090909090909,\n",
+       "    0.4909090909090909,\n",
+       "    0.4909090909090909,\n",
+       "    0.4909090909090909],\n",
+       "   'f1': [0.22701612903225804,\n",
+       "    0.40723562152133586,\n",
+       "    0.41803278688524587,\n",
+       "    0.41803278688524587,\n",
+       "    0.42741935483870963,\n",
+       "    0.432,\n",
+       "    0.432,\n",
+       "    0.432,\n",
+       "    0.432,\n",
+       "    0.432]},\n",
+       "  'validation': {'precision': [0.22201492537313433,\n",
+       "    0.4058028616852146,\n",
+       "    0.375,\n",
+       "    0.38571428571428573,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718,\n",
+       "    0.3873239436619718],\n",
+       "   'recall': [0.4153409090909091,\n",
+       "    0.3653409090909091,\n",
+       "    0.43636363636363634,\n",
+       "    0.4909090909090909,\n",
+       "    0.5,\n",
+       "    0.5,\n",
+       "    0.5,\n",
+       "    0.5,\n",
+       "    0.5,\n",
+       "    0.5],\n",
+       "   'f1': [0.17357565856646928,\n",
+       "    0.3527665889336442,\n",
+       "    0.40336134453781514,\n",
+       "    0.432,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365,\n",
+       "    0.4365079365079365]}}}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.scores"
+   ]
   },
   {
    "cell_type": "code",
@@ -1420,18 +1480,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
   }
  },
  "nbformat": 4,
